[metadata]
name = vmware_firewall
version = 2015.1
summary = Neutron firewall driver for managing Security Groups on vmware vCenter.
description-file =
    README.rst
author = Mirantis Inc
author-email = info@mirantis.com
home-page = http://www.mirantis.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    vmware_firewall
#data_files =
#    etc/neutron =
#        etc/ml2_conf_vmware_firewall.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers =
    vmware_firewall = vmware_firewall.driver:VMwareDVSFirewallDriver

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = locale/vmware_firewall.pot

[compile_catalog]
directory = locale
domain = neutron

[update_catalog]
domain = neutron
output_dir = locale
input_file = locale/vmware_firewall.pot

